testsuite/tests/backpack/should_fail/bkpfail04.bkp
unit p where
    signature A where
        data A = A { foo :: Int }

unit q where
    signature A where
        data A = A { bar :: Bool }

unit r where
    include p
    include q
    module M where
        import A
        x = foo
        y = bar
